[gd_scene load_steps=3 format=3 uid="uid://0dtxq6qwjdry"]

[ext_resource type="Script" uid="uid://dsno52xkus4v" path="res://scripts/settings_menu.gd" id="1_1yw23"]
[ext_resource type="Texture2D" uid="uid://5obniua11664" path="res://assets/images/background/80s-retro-arcade.jpg" id="2_dd8lr"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1yw23")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 647.0
texture = ExtResource("2_dd8lr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 378.0
offset_top = 348.0
offset_right = 742.0
offset_bottom = 569.0

[node name="AudioSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="ResolutionDropdown" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="FSCheck" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="Button_Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="ASP_Music" type="AudioStreamPlayer2D" parent="VBoxContainer"]

[node name="ASP_Sound" type="AudioStreamPlayer2D" parent="VBoxContainer"]

[connection signal="pressed" from="VBoxContainer/Button_Back" to="." method="_on_button_back_pressed"]
